Add Airline#booked_adult_passengers to models

--- a/app/views/flights/_passengers.html.erb
+++ b/app/views/flights/_passengers.html.erb
@@ -1,7 +1,7 @@
 <h4><em>All Passengers Currently Booked:</em></h4>
   <% flight.passengers.each do |passenger|  %>
     <div id="passenger-<%= passenger.id %>">
-      <div style="float:left; padding-right:10px;">
+      <div style="float:left; padding-top:3px; padding-right:10px;">
         <p><%= passenger.name %></p>
       </div>
       <br>
